# code-llama-rag

./: .gitignore  README.md  pyproject.toml
code_llama_rag/: code_talker.py  context_builder.py
example-code/food/: kitchen.py
example-code/magic/: spell_book.py
example-code/tech/: gadget.py
nbs/botkop/: 001-code-llama-rag.ipynb  002-example.ipynb  003-ast-search.ipynb  code_llama_rag
