[tool.poetry]
name = "code-llama-rag"
version = "0.1.0"
description = ""
authors = ["Koen Dejonghe <koen@fietsoverland.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.1"
transformers = "^4.38.2"
sentence-transformers = "^2.5.1"
torch = "^2.2.1"
bitsandbytes = "^0.42.0"
accelerate = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
